--- a/Views/Home/Buscar.cshtml
+++ b/Views/Home/Buscar.cshtml
@@ -130,7 +130,7 @@
                                             <td>@reservas.fechaReserva</td>
                                             <td>
                                                 <a href="@Url.Action("Cancelar", "Home", new { rut = @reservas.rutCliente })">
-                                                    <img src="images/icons/thrash.jpg" data-toggle="tooltip" data-placement="top" title="Cancelar reserva">
+                                                    <img src="/images/icons/trash.jpg" style="width:8px; height:8px;" data-toggle="tooltip" data-placement="top" title="Cancelar reserva">
                                                 </a>
                                             </td>
                                         </tr>
